--- a/quiz/index.html
+++ b/quiz/index.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mitosis: Quiz</title>
-  <link rel="stylesheet" href="/styles/base.css">
-  <link rel="stylesheet" href="/styles/header.css">
-  <link rel="stylesheet" href="/styles/quiz.css">
-  <script src="/scripts/base.js" defer></script>
-  <script src="/scripts/quiz.js" defer></script>
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/quiz.css">
+  <script src="scripts/base.js" defer></script>
+  <script src="scripts/quiz.js" defer></script>
 </head>
 <body>
   <div class="transition active"></div>
     <header>
         <div class="left">
-            <img src="/assets/mitosis.png" alt="" class="logo">
+            <img src="assets/mitosis.png" alt="" class="logo">
             <div class="title">Mitosis</div>
         </div>
         <nav>
-            <a href="/prophase">Prophase</a>
-            <a href="/metaphase">Metaphase</a>
-            <a href="/anaphase">Anaphase</a>
-            <a href="/telophase">Telophase</a>
-            <a href="/cytokinesis">Cytokinesis</a>
-            <a href="/quiz">Quiz</a>
+            <a href="prophase">Prophase</a>
+            <a href="metaphase">Metaphase</a>
+            <a href="anaphase">Anaphase</a>
+            <a href="telophase">Telophase</a>
+            <a href="cytokinesis">Cytokinesis</a>
+            <a href="quiz">Quiz</a>
         </nav>
     </header>
     <main>
